fix: main product name

--- a/src/app/features/shop/product-detail/product-detail.html
+++ b/src/app/features/shop/product-detail/product-detail.html
@@ -57,7 +57,7 @@
     <!-- Right Side: Product Info -->
     <div class="product-info">
 
-      <h1 class="product-name">{{ product.name }}</h1>
+      <h1 class="main-product-name">{{ product.name }}</h1>
 
       <p class="product-short-description">{{ product.short_description }}</p>
 
