add: icon and text for appbar and logout confirmation

--- a/src/app/shared/components/app-navbar/app-navbar.html
+++ b/src/app/shared/components/app-navbar/app-navbar.html
@@ -35,8 +35,12 @@
 
         <!-- Cuenta -->
         <div class="account-section" (click)="goToAccount()">
-          <mat-icon class="account-icon">person_add</mat-icon>
-          <span class="account-text">CUENTA</span>
+          <mat-icon class="account-icon">
+            {{ isUserLogged() ? 'person' : 'person_add' }}
+          </mat-icon>
+          <span class="account-text">
+            {{ isUserLogged() ? 'MI CUENTA' : 'INGRESAR' }}
+          </span>
         </div>
 
         <!-- Carrito -->
