--- a/src/app/features/profile/profile.html
+++ b/src/app/features/profile/profile.html
@@ -181,7 +181,7 @@
               <th mat-header-cell *matHeaderCellDef>Acciones</th>
               <td mat-cell *matCellDef="let product">
                 <div class="action-buttons">
-                  <button mat-icon-button (click)="viewProduct(product)" matTooltip="Ver detalles" >
+                  <button mat-icon-button (click)="viewProduct(product)" matTooltip="Ver producto" >
                     <mat-icon>visibility</mat-icon>
                   </button>
                   <button mat-icon-button (click)="editProduct(product)" matTooltip="Editar" >
