--- a/src/app/shared/components/app-navbar/app-navbar.html
+++ b/src/app/shared/components/app-navbar/app-navbar.html
@@ -58,6 +58,7 @@
       <div class="nav-row-content">
         <button routerLink="/nosotros" routerLinkActive="active-link">NOSOTROS</button>
         <button routerLink="/tienda" routerLinkActive="active-link">TIENDA</button>
+        <button routerLink="/encuentra-juguete" routerLinkActive="active-link">ENCUENTRA TU JUGUETE</button>
       </div>
     </nav>
   </div>
