add: typing points

--- a/src/app/features/find-toy/find-toy.html
+++ b/src/app/features/find-toy/find-toy.html
@@ -121,6 +121,13 @@
             </div>
           </div>
         </ng-container>
+        <div *ngIf="isTyping" class="message bot-message">
+          <div class="message-bubble typing-indicator">
+            <div class="typing-dot"></div>
+            <div class="typing-dot"></div>
+            <div class="typing-dot"></div>
+          </div>
+        </div>
       </div>
 
       <!-- Input del chat -->
