fix: montesori guide

--- a/src/app/features/shop/product-detail/product-detail.html
+++ b/src/app/features/shop/product-detail/product-detail.html
@@ -117,7 +117,7 @@
               [class.user-message]="!message.isBot"
               [class.bot-message]="message.isBot">
               <div class="message-bubble">
-                {{ message.text }}
+                <div [innerHTML]="formatBotMessage(message)"></div>
               </div>
             </div>
 
