--- a/src/app/features/profile/profile.html
+++ b/src/app/features/profile/profile.html
@@ -47,11 +47,11 @@
             <p class="info-value">{{ userInfo?.first_name }} {{ userInfo?.last_name }}</p>
             <p class="info-value">{{ userInfo?.email }}</p>
 
-            <div class="action-links">
+            <!--div class="action-links">
               <button class="link-button" (click)="onEdit()">Editar</button>
               <span class="separator">|</span>
               <button class="link-button" (click)="onChangePassword()">Cambiar la contraseña</button>
-            </div>
+            </div-->
           </div>
 
           <div class="info-group">
