--- a/src/app/features/shop/shop.html
+++ b/src/app/features/shop/shop.html
@@ -119,7 +119,7 @@
               {{ product.price }} €
             </span>
             <span class="final-price">
-              {{ calculateFinalPrice(product) }} €
+              S/ {{ calculateFinalPrice(product) }}
             </span>
           </div>
 
