--- a/src/app/shared/components/app-navbar/app-navbar.html
+++ b/src/app/shared/components/app-navbar/app-navbar.html
@@ -118,6 +118,9 @@
         <button routerLink="/tienda" (click)="closeMenu()" routerLinkActive="active-link">
           <span>TIENDA</span>
         </button>
+        <button routerLink="/encuentra-juguete" (click)="closeMenu()" routerLinkActive="active-link">
+          ENCUENTRA TU JUGUETE
+        </button>
       </nav>
 
       <div class="menu-social">
