--- a/src/app/shared/components/app-navbar/app-navbar.html
+++ b/src/app/shared/components/app-navbar/app-navbar.html
@@ -14,7 +14,7 @@
           <a href="https://www.instagram.com/bylittlehands.pe/" target="_blank" class="social-link">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://tiktok.com" target="_blank" class="social-link">
+          <a href="https://www.tiktok.com/@bylittlehands.pe?_t=ZS-90yLY2DTeBL&_r=1" target="_blank" class="social-link">
             <i class="fab fa-tiktok"></i>
           </a>
         </div>
@@ -129,7 +129,7 @@
           <i class="fab fa-instagram"></i>
           <span>Instagram</span>
         </a>
-        <a href="https://tiktok.com" target="_blank" class="menu-social-link">
+        <a href="https://www.tiktok.com/@bylittlehands.pe?_t=ZS-90yLY2DTeBL&_r=1" target="_blank" class="menu-social-link">
           <i class="fab fa-tiktok"></i>
           <span>TikTok</span>
         </a>
