--- a/src/app/shared/components/app-footer/app-footer.html
+++ b/src/app/shared/components/app-footer/app-footer.html
@@ -22,7 +22,7 @@
         <a href="https://www.instagram.com/bylittlehands.pe/" target="_blank" class="social-icon">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://tiktok.com" target="_blank" class="social-icon">
+        <a href="https://www.tiktok.com/@bylittlehands.pe?_t=ZS-90yLY2DTeBL&_r=1" target="_blank" class="social-icon">
           <i class="fab fa-tiktok"></i>
         </a>
       </div>
