--- a/src/app/shared/components/app-footer/app-footer.html
+++ b/src/app/shared/components/app-footer/app-footer.html
@@ -10,7 +10,7 @@
     <div class="footer-column">
       <h3 class="footer-title">Información</h3>
       <ul class="footer-links">
-        <li><a routerLink="/contacto">Contacto</a></li>
+        <li><a (click)="handleContact()" >Contacto</a></li>
         <li><a routerLink="/nosotros">Sobre Nosotros</a></li>
       </ul>
     </div>
